--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+	font-family: "Roboto", sans-serif;
+}
+
 .App {
 	background: #f2f2f2;
 
@@ -115,6 +119,7 @@
 }
 .date {
 	color: #adadad;
+	font-style: italic;
 }
 .note-link:hover {
 	text-decoration: none;
@@ -184,6 +189,17 @@ input[type="textarea"] {
 	font-size: 24px;
 	border: 1px solid black;
 }
+.savenote-button:hover {
+	background: #84e5ff;
+	width: 10%;
+	cursor: pointer;
+	padding: 20px;
+	color: white;
+	font-weight: bold;
+	font-size: 24px;
+	border: 1px solid black;
+}
+
 .navlink {
 	text-decoration: none;
 	color: white;
@@ -229,9 +245,11 @@ input[type="textarea"] {
 
 .sidebar-header {
 	color: #424141;
-	text-align: left;
+	text-align: center;
 	font-size: 26px;
 	line-height: 0.3;
+	margin-top: 30px;
+	margin-bottom: 20px;
 	margin-left: 10%;
 	cursor: default;
 }
