--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,41 @@ input[type="textarea"] {
 	font-size: 24px;
 	border: 1px solid black;
 }
+.savenote-button-export {
+	background: #30d4ff;
+	width: 12%;
+	margin-left: 2%;
+	cursor: pointer;
+	padding: 12px;
+	color: white;
+	font-weight: bold;
+	font-size: 17px;
+	border: 1px solid black;
+}
+.csv {
+	text-decoration: none;
+	color: green;
+}
+.csv-logo {
+	width: 12%;
+	padding-bottom: 3px;
+	margin-left: 5px;
+}
+.csv:hover {
+	text-decoration: none;
+	color: green;
+}
+.savenote-button-export:hover {
+	background: #84e5ff;
+	width: 12%;
+	margin-left: 2%;
+	cursor: pointer;
+	padding: 12px;
+	color: white;
+	font-weight: bold;
+	font-size: 17px;
+	border: 1px solid black;
+}
 
 .navlink {
 	text-decoration: none;
